--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@ body.boss-mode #stickySubmit button{max-width:600px}
 <div id="modalC"></div>
 
 <script>
-const APPS_SCRIPT_URL="https://script.google.com/macros/s/AKfycbz5jPw3BH1RfwndDhe7k2mgarAcBfV2M9VQp0fX-QfuhEqJ_vPETjoWkHHNVq3l-_ou/exec";
+const APPS_SCRIPT_URL="https://script.google.com/macros/s/AKfycbzufcShcQFK_D7gtc5pwvaJ4h9heLF07poDU34cwMPc_WjSR3dZC8VmvinIM3Jk3ucS/exec";
 
 const DEFAULT_USERS=[
   {email:"boss@hotmail.com",pin:"0000",name:"หัวหน้า",role:"boss",team:"ทั้งหมด"},
@@ -372,7 +372,7 @@ function nav(p){
   document.querySelectorAll('.pg').forEach(x=>x.classList.remove('ac'));const el=document.getElementById('pg-'+p);if(el)el.classList.add('ac');
   document.querySelectorAll('.nb').forEach(b=>b.classList.toggle('ac',b.dataset.p===p));
   document.getElementById('stickySubmit').style.display=p==='add'?'block':'none';
-  if(p==='home'){updateHome();autoRefreshFromCloud(true)}if(p==='add'){initAddPage();loadProductsFromSheets().then(()=>renderProdCards())}if(p==='orders'){renderOrd();autoRefreshFromCloud(true);if(cu.role==='boss'){fetchBossData().then(()=>{mergeSheetsOrders();renderOrd()})}}if(p==='dash'){buildDF();renderDash();if(cu.role==='boss'){fetchBossData().then(()=>{mergeSheetsOrders();renderDash()})}}if(p==='settings'){renderProdMgmt();renderTeam()}window.scrollTo(0,0);
+  if(p==='home'){updateHome()}if(p==='add'){initAddPage();loadProductsFromSheets().then(()=>renderProdCards())}if(p==='orders'){renderOrd();autoRefreshFromCloud(true);if(cu.role==='boss'){fetchBossData().then(()=>{mergeSheetsOrders();renderOrd()})}}if(p==='dash'){buildDF();renderDash();if(cu.role==='boss'){fetchBossData().then(()=>{mergeSheetsOrders();renderDash()})}}if(p==='settings'){renderProdMgmt();renderTeam()}window.scrollTo(0,0);
 }
 
 // รวมออเดอร์จาก Sheets เข้า orders (สำหรับ boss)
@@ -447,6 +447,7 @@ function updateHome(){
   }else{
     document.getElementById('bossDatePicker').style.display='none';
     renderAdminHome(td);
+    autoRefreshFromCloud(true);
   }
 }
 
@@ -776,9 +777,49 @@ function syncProducts(){if(APPS_SCRIPT_URL.includes("YOUR_GOOGLE"))return;const 
 function syncUsers(){if(APPS_SCRIPT_URL.includes("YOUR_GOOGLE"))return;const body=JSON.stringify({action:"saveUsers",users:users.map(u=>({email:u.email,pin:u.pin,name:u.name,role:u.role,team:u.team}))});fetch(APPS_SCRIPT_URL,{method:"POST",mode:"no-cors",headers:{"Content-Type":"text/plain"},body:body}).then(()=>console.log("SyncUsers sent")).catch(e=>console.log("SyncUsers err:",e))}
 async function forceSyncToSheets(){showSuc('☁️','กำลัง Sync...','อัปโหลดข้อมูล');try{syncProducts();syncUsers();showSuc('✅','Sync สำเร็จ!','สินค้า '+products.length+' รายการ\nรอ 5 วิ แล้วให้แอดมิน logout/login ใหม่');setTimeout(hideSuc,4000)}catch(e){showSuc('❌','Sync ไม่สำเร็จ',e.message||'ลองใหม่');setTimeout(hideSuc,3000)}}
 async function pullFromCloud(){showSuc('⬇️','กำลังดึงข้อมูล...','จาก Google Sheets');try{const res=await fetch(APPS_SCRIPT_URL);const data=await res.json();if(data.products){products=data.products.map(p=>({id:p.id,name:p.name,short:p.name,price:0,icon:'',sheet:p.name,sku:'',img:''}));sv('cream_products',products)}if(data.users){users=data.users;sv('cream_users',users)}orders=[];sv('cream_orders',orders);showSuc('✅','ดึงข้อมูลสำเร็จ!','สินค้า: '+products.length+' | สมาชิก: '+users.length+'\nออเดอร์ในเครื่องถูกล้าง');setTimeout(()=>{hideSuc();nav('settings')},2000)}catch(e){showSuc('❌','ดึงไม่สำเร็จ',e.message||'ลองใหม่');setTimeout(hideSuc,3000)}}
-async function autoRefreshFromCloud(force){if(!force&&window._lastSubmit&&Date.now()-window._lastSubmit<10000)return;try{const res=await fetch(APPS_SCRIPT_URL);const data=await res.json();sheetsData=data;if(data.products&&data.products.length>0){products=data.products.map(p=>({id:p.id,name:p.name,short:p.name,price:0,icon:'',sheet:p.name,sku:'',img:''}));sv('cream_products',products)}if(data.users&&data.users.length>0){users=data.users;sv('cream_users',users);if(cu&&cu.role!=='boss'){const still=users.find(x=>x.email===cu.email&&x.pin===cu.pin);if(!still){cu=null;localStorage.removeItem('cream_cu');location.reload();return}}}const today=fD(new Date());const cloudOrders=(data.orders||[]).map(so=>({id:Date.now()+Math.random(),dailyNo:so.dailyNo||0,date:normDate(so.date),time:so.time||'',productName:so.productName||'',price:so.amount||0,qty:1,amount:so.amount||0,phone:so.phone||'',detail:so.detail||'',addedBy:so.adminEmail||'',adminName:so.adminName||'',team:(users.find(u=>u.email===so.adminEmail)||{}).team||''}));const localOnly=orders.filter(o=>o._local&&o.date===today&&!cloudOrders.find(c=>c.time===o.time&&Math.abs(c.amount-o.amount)<1&&(c.addedBy===o.addedBy||c.adminName===o.adminName)));orders=[...cloudOrders,...localOnly];sv('cream_orders',orders);console.log('Auto-refresh: cloud='+cloudOrders.length+' local='+localOnly.length);const cp=document.querySelector('.pg.ac');if(cp){const pid=cp.id.replace('pg-','');if(pid==='orders')renderOrd();if(pid==='home')updateHome();if(pid==='add'&&products.length>0)renderProdCards()}}catch(e){console.log('Auto-refresh err:',e)}}
+async function autoRefreshFromCloud(force){
+  if(!force&&window._lastSubmit&&Date.now()-window._lastSubmit<10000)return;
+  try{
+    const viewDate=(cu&&cu.role==='boss'&&bossViewDate)?bossViewDate:null;
+    const dateParam=viewDate?'?date='+encodeURIComponent(viewDate):'';
+    const res=await fetch(APPS_SCRIPT_URL+dateParam);
+    const data=await res.json();
+    sheetsData=data;
+    if(data.products&&data.products.length>0){
+      products=data.products.map(p=>({id:p.id,name:p.name,short:p.name,price:0,icon:'',sheet:p.name,sku:'',img:''}));
+      sv('cream_products',products)
+    }
+    if(data.users&&data.users.length>0){
+      users=data.users;sv('cream_users',users);
+      if(cu&&cu.role!=='boss'){
+        const still=users.find(x=>x.email===cu.email&&x.pin===cu.pin);
+        if(!still){cu=null;localStorage.removeItem('cream_cu');location.reload();return}
+      }
+    }
+    const td=viewDate||fD(new Date());
+    const cloudOrders=(data.orders||[]).map(so=>({
+      id:Date.now()+Math.random(),dailyNo:so.dailyNo||0,date:normDate(so.date),
+      time:so.time||'',productName:so.productName||'',price:so.amount||0,
+      qty:so.qty||1,amount:so.amount||0,phone:so.phone||'',detail:so.detail||'',
+      addedBy:so.adminEmail||'',adminName:so.adminName||'',
+      team:(users.find(u=>u.email===so.adminEmail)||{}).team||''
+    }));
+    const localOnly=orders.filter(o=>o._local&&o.date===td&&!cloudOrders.find(c=>c.time===o.time&&Math.abs(c.amount-o.amount)<1&&(c.addedBy===o.addedBy||c.adminName===o.adminName)));
+    const otherDays=orders.filter(o=>o.date!==td&&!o._local);
+    orders=[...cloudOrders,...localOnly,...otherDays];
+    sv('cream_orders',orders);
+    console.log('Auto-refresh: cloud='+cloudOrders.length+' local='+localOnly.length+' date='+td);
+    const cp=document.querySelector('.pg.ac');
+    if(cp){
+      const pid=cp.id.replace('pg-','');
+      if(pid==='orders')renderOrd();
+      if(pid==='home'){if(cu.role==='boss')renderBossHome(td);else updateHome()}
+      if(pid==='add'&&products.length>0)renderProdCards()
+    }
+  }catch(e){console.log('Auto-refresh err:',e)}
+}
 function clearLocalData(){if(!confirm('ล้างข้อมูลทั้งหมดในเครื่อง?\n(สินค้า, ออเดอร์, ทีม)\n\nข้อมูลใน Cloud ไม่ถูกลบ\nLogin ใหม่จะดึงจาก Cloud'))return;['cream_products','cream_orders','cream_teams','cream_prodAssign'].forEach(k=>localStorage.removeItem(k));products=[];orders=[];showSuc('🗑️','ล้างแล้ว!','Login ใหม่เพื่อดึงข้อมูลจาก Cloud');setTimeout(()=>{hideSuc();doLogout()},2000)}
-async function testConnection(){showSuc('🔍','กำลังทดสอบ...','เชื่อมต่อ Google Sheets');try{const res=await fetch(APPS_SCRIPT_URL);const data=await res.json();const pCount=data.products?data.products.length:0;const oCount=data.orders?data.orders.length:0;showSuc('✅','เชื่อมต่อสำเร็จ!','สินค้าใน Cloud: '+pCount+' รายการ\nออเดอร์วันนี้: '+oCount+' รายการ');setTimeout(hideSuc,4000)}catch(e){showSuc('❌','เชื่อมต่อไม่ได้',e.message||'ตรวจสอบ URL');setTimeout(hideSuc,3000)}}
+async function testConnection(){showSuc('🔍','กำลังทดสอบ...','เชื่อมต่อ Google Sheets');try{const res=await fetch(APPS_SCRIPT_URL);const data=await res.json();const pCount=data.products?data.products.length:0;const oCount=data.orders?data.orders.length:0;const uCount=data.users?data.users.length:0;const oSample=data.orders&&data.orders[0]?JSON.stringify(data.orders[0]).substring(0,100):'ไม่มี';showSuc('✅','เชื่อมต่อสำเร็จ!','สินค้า: '+pCount+'\nสมาชิก: '+uCount+'\nออเดอร์วันนี้: '+oCount+'\nตัวอย่าง: '+oSample);setTimeout(hideSuc,8000)}catch(e){showSuc('❌','เชื่อมต่อไม่ได้',e.message||'ตรวจสอบ URL');setTimeout(hideSuc,3000)}}
 
 // โหลดสินค้าจาก Sheets (ใช้ตอน login)
 async function loadProductsFromSheets(){if(APPS_SCRIPT_URL.includes("YOUR_GOOGLE"))return;try{const res=await fetch(APPS_SCRIPT_URL);const data=await res.json();if(data.products&&data.products.length>0){products=data.products.map(p=>({id:p.id,name:p.name,short:p.name,price:0,icon:'',sheet:p.name,sku:'',img:''}));sv('cream_products',products)}else if(cu&&cu.role==='boss'&&products.length>0){syncProducts()}if(data.users&&data.users.length>0){users=data.users;sv('cream_users',users)}else if(cu&&cu.role==='boss'&&users.length>0){syncUsers()}}catch(e){console.log("LoadProd error:",e.message||e)}}
